k8s/kommande/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kommande
  namespace: kommande
  labels:
    app: kommande
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: kommande
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kommande
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: kommande
          image: ghcr.io/therayquaza/home-cluster/kommande:v0.3.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
