k8s/kommande/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kommande-service
  namespace: kommande
spec:
  selector:
    app: kommande
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
